Update Appium URL to config